fix: only apply german hero specific styles on mobile

--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -45,9 +45,11 @@ $logo-width-desktop: 190px;
       color: white;
       max-width: 800px;
 
-      &.german {
-        font-size: 25px;
-        line-height: 1.5;
+      @include mq($until: tablet) {
+        &.german {
+          font-size: 25px;
+          line-height: 1.5;
+        }
       }
 
       @include mq($from: tablet) {
